front-end/src/components/header/style.css
header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #D9FFCB;
    color:#026602;
    padding: 15px 7%;
}

nav a {
    color:#242424;
    text-decoration: none;
    margin: 0 2rem;
    font-size: 18px;
}
header .nav-btn {
	padding: 5px;
	cursor: pointer;
	background: transparent;
	border: none;
	outline: none;
	color: #026602;
	visibility: hidden;
	opacity: 0;
	font-size: 1.8rem;
}
nav a:hover {
	color: green;
    font-size: 20px;

}

nav .pesquisa{
    display: flex;
    align-items: center;
    background: #7cdb5f;
    padding: 10px 20px;
    border-radius: 50px;
}
nav .pesquisa input{
    padding: 6px;
    background: transparent;
    border: 0;
    outline: 0;
    color: #242424;
    font-size: 18px;
    max-width: 200px;
}
nav .pesquisa input::placeholder{
    color: #242424;
}
nav .pesquisa img{
    width: 20px;
    cursor: pointer;
}
header div,
nav {
	display: flex;
	align-items: center;
}

@media only screen and (max-width: 1024px) {
    header .nav-btn {
		visibility: visible;
		opacity: 1;
	}

	header nav {
		position: fixed;
		top: -100vh;
		left: 0;
		height: 100%;
		width: 100%;
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		gap: 1.5rem;
		background-color: #D9FFCB;
		transition: 1s;
	}

	header .responsive_nav {
		transform: translateY(100vh);
	}

	nav .nav-close-btn {
		position: absolute;
		top: 2rem;
		right: 2rem;
	}

	nav a {
		font-size: 1.5rem;
	}
}

